[gd_scene load_steps=6 format=3 uid="uid://btnq2i2y471ar"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_j1c41"]
[ext_resource type="AudioStream" uid="uid://8hftkw62src7" path="res://sound/Music/747635__newlocknew__ambmisc_early-morningsummernear-the-schoolswiftscrows.wav" id="2_jrqs7"]

[sub_resource type="SystemFont" id="SystemFont_v0iwj"]
font_names = PackedStringArray("Old English Text MT")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_1h7gi"]
font_names = PackedStringArray("Old English Text MT")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_wddob"]
font_names = PackedStringArray("Old English Text MT")
subpixel_positioning = 0

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_j1c41")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1159.0
offset_bottom = 651.0
color = Color(0.66, 0, 0, 0.239216)

[node name="MenuItems" type="VBoxContainer" parent="ColorRect"]
layout_mode = 2
offset_left = 522.5
offset_top = 282.5
offset_right = 636.5
offset_bottom = 454.5
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 30

[node name="ReplayButton" type="Button" parent="ColorRect/MenuItems"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = SubResource("SystemFont_v0iwj")
theme_override_font_sizes/font_size = 36
text = "Replay
"

[node name="MainMenuButton" type="Button" parent="ColorRect/MenuItems"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = SubResource("SystemFont_1h7gi")
theme_override_font_sizes/font_size = 36
text = "Main Menu"

[node name="GameOverLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -317.5
offset_right = 317.5
offset_bottom = 151.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_wddob")
theme_override_font_sizes/font_size = 150

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jrqs7")
